--- a/mobileApp/app/src/main/AndroidManifest.xml
+++ b/mobileApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.WarehouseEmployee"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ManageProductApplication"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.WarehouseEmployee">
