--- a/mobileApp/gradle/libs.versions.toml
+++ b/mobileApp/gradle/libs.versions.toml
@@ -48,5 +48,5 @@ storage-kt = { module = "io.github.jan-tennert.supabase:storage-kt" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "2.0.21" }
 
