--- a/mobileApp/gradle/libs.versions.toml
+++ b/mobileApp/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ bom = "3.0.1"
 hiltAndroid = "2.35"
 hiltCompiler = "1.2.0"
 hiltNavigationCompose = "1.2.0"
-kotlin = "1.9.0"
+kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -49,5 +49,6 @@ storage-kt = { module = "io.github.jan-tennert.supabase:storage-kt" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version = "2.0.21" }
-
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
